--- a/sahan/template/home.html
+++ b/sahan/template/home.html
@@ -1,1 +1,7 @@
-<h1>Welcome To The Home Page ,{{name}}!!!!</h1><!--Django Template Language DTL-->
+{% extends 'base.html'%}
+
+{% block content %}
+
+<h1>Welcome To The Home Page ,{{name}}!!!!</h1>
+
+{% endblock %}
