--- a/sahan/template/home.html
+++ b/sahan/template/home.html
@@ -4,7 +4,9 @@
 
 <h1>Welcome To The Home Page ,{{name}}!!!!</h1>
 
-<form action="add">
+<form action="{% url 'add' %}" method="post">
+    {% csrf_token %} <!-- Include this if you're using CSRF protection -->
+    <!-- Your form fields go here -->
     <label>Enter 1st number</label>
     <input type="text" name="num1"><br>
     <label>Enter 2nd number</label>
